- added comments on csma-tests inside omnetpp.ini - merged test/mac/utils directory into csma-test

--- a/tests/mac/csma/omnetpp.ini
+++ b/tests/mac/csma/omnetpp.ini
@@ -100,20 +100,11 @@ csmaTestSim.node[2].mobility.x = 400
 csmaTestSim.node[2].mobility.y = 300
 csmaTestSim.node[2].mobility.z = 100
 
-#csmaTestSim.node[1..9].mobility.x = uniform(10, 100)
-#csmaTestSim.node[1..9].mobility.y = uniform(10, 100)
-#csmaTestSim.node[*].mobility.z = -1
-
 csmaTestSim.node[*].mobility.debug = false
 csmaTestSim.node[*].mobility.speed = 0
 csmaTestSim.node[*].mobility.updateInterval = 0.5s
 csmaTestSim.node[*].mobility.angle = 0
 csmaTestSim.node[*].mobility.acceleration = 0
-
-#phySim.node[*].net.debug = false
-#phySim.node[*].net.stats = false
-#phySim.node[*].net.headerLength = 10*8bit
-#phySim.node[*].net.notAffectedByHostState = true
 
 csmaTestSim.node[*].appl.debug = false
 csmaTestSim.node[*].appl.packetLength = 24880bit
@@ -123,6 +114,18 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 csmaTestSim.world.bitrate = 250000
 
 
+#################################################
+# Test 1
+# these tests produce the usage statistics of the channel
+# for different configurations. Usage statistics means
+# how much of the channels possible maximum capacity is
+# used at which amount of generated traffic.
+# 
+# The results of this tests are visualized by "Test1.anf"
+# and show plots of the generated traffic against the received
+# traffic where both values are normalized against bitrate
+# and simulation time.
+##################################################
 [Config Test1-A]
 description = "increasing number of hosts, unbursted, with queue"
 csmaTestSim.playgroundSizeX = 10m
@@ -160,6 +163,18 @@ extends = Test1-B
 description = "increasing send rate per host, unbursted, without queue"
 **.mac.queueLength = 0
 
+
+##################################################
+# Test 2
+# These test configurations are meant to show the effect
+# of MAC-ACKS on the usage of the channel with increasing
+# distance between the hosts.
+# Test2-C further shows the effect of the hidden station
+# problem on CSMA.
+#
+# The results can be visualized by "Test2.anf" and show
+# plots of channel usage at different distances.
+##################################################
 [Config Test2-A]
 description = "one sending host moving towards sink, with mac-acks"
 sim-time-limit = 300s
@@ -186,7 +201,9 @@ csmaTestSim.world.bcTraffic = true
 
 [Config Test2-C]
 extends = Test2-A
-description = "two sending host moving towards sink, hidden station config"
+description = "one sending host stationary in range of sink (hidden station), \
+			   one host moving towards sink and stationary sender,\
+			   with mac ACKS"
 csmaTestSim.numHosts = 3
 **.appl.packetsPerPacketTime = 0.125
 csmaTestSim.node[2].mobility.x = 380
@@ -195,6 +212,15 @@ csmaTestSim.node[2].appl.burstSize = 1
 csmaTestSim.node[2].appl.destination = 11
 csmaTestSim.node[1].appl.destination = 11
 
+######################################################
+# Test 3
+# This tests is meant to show that CSMA uses exponential backoffs.
+# This is done by increasing the number of hosts in the network exponentially.
+# While the average backoff duration of each hosts should increase
+# exponentially, the average number of backoffs should increase linearly.
+#
+# The results of this tests are visualized by "Test3.anf".
+######################################################
 [Config Test3]
 description = "quadratic increasing number of hosts results in linear increase of backoffs"
 sim-time-limit = ${numHosts}s
