- renamed csma-test network to examples/ieee802154Narrow

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -4,7 +4,7 @@ cmdenv-event-banners = true
 cmdenv-module-messages = true
 
 cmdenv-runs-to-execute = 
-ned-path = ../../../base;../../../modules;../../../examples;../..;
+ned-path = ../../base;../../modules;../../examples;
 network = csmaTestSim
 
 sim-time-limit = 100s
