Increased number of packets, increased distance range.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -279,22 +279,22 @@ sim.node[0].nic.mac.vector-recording = false
 #sim.node[0].nic.mac.ber.with-akaroa = true
 
 [Config flury07]
-description="Reproduction of MAI scenario A from Flury et al., ICUWB09"
+description="Reproduction of MAI scenario A from Flury et al., ICUWB07"
 **.numHosts = ${NbNodes=3}
 repeat = 1
 sim.node[0].mobility.x = 250 # middle of playground
-sim.node[1].mobility.x = 250 - ${dist=1..10 step 2, 15..50 step 5}
+sim.node[1].mobility.x = 250 - ${dist=1..10 step 2, 15..50 step 5, 10..100 step 10}
 sim.node[2].mobility.x = 250 + ${dist}
 sim.node[*].app.dstAddr = 0
 sim.node[0].app.nbPackets = 0
 sim.node[*].app.payloadSize = ${packetSize=127} byte
 sim.node[*].app.flood = false
-sim.node[*].app.nbPackets = ${nbPackets=100}
+sim.node[*].app.nbPackets = ${nbPackets=500}
 sim.node[*].app.trafficParam = ${rate=0.1,0.005} 
 sim-time-limit=1000s # so we have 1 second per packet
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dBseg}.xml") 
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,cm1}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB,3dBsegDefault}.xml") 
 sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
