Updated configurations to work without akaroa.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -143,24 +143,15 @@ description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
 repeat = 1
 sim.node[1].app.payloadSize = ${packetSize=7, 31, 127} byte # ${packetSize=8,32,128} byte
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2}.xml")
 sim.node[1].mobility.x = ${distance=1..5 step 1, 7.5, 10, 15..30 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
-sim.node[1].app.nbPackets = ${nbPackets=1000000}
+sim.node[1].app.nbPackets = ${nbPackets=1000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].stats.vector-recording = false
 #sim.node[0].stats.**.with-akaroa = false
 sim.node[0].nic.mac.vector-recording = true
 sim.node[0].nic.phy.vector-recording = true
-#sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
-#sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
-#sim.node[0].nic.mac.ber.with-akaroa = true
-#sim.node[0].nic.mac.ser.with-akaroa = true
-#sim.node[0].nic.phy.sinr.with-akaroa = true
-#sim.node[0].nic.phy.averagePower.with-akaroa = false
-#sim.node[0].nic.phy.Prx.with-akaroa = true
-#sim.node[0].nic.phy.pathloss.with-akaroa = true
-#sim.node[0].nic.phy.noise.with-akaroa = true
 
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
@@ -241,7 +232,7 @@ repeat = 10
 [Config MAICircle]
 description = "Evaluates the impact of multiple access interference on bit error rate with homogeneous interferers"
 sim.node[0].app.nbPackets = 0
-sim.node[*].app.nbPackets = 100000000
+sim.node[*].app.nbPackets = 100
 sim.node[*].app.dstAddr = 0
 include topo.ini
 
@@ -251,15 +242,14 @@ extends = MAICircle
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 sim.node[*].app.payloadSize = ${PacketSize=7,31} byte
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm5}.xml")
-**.numHosts = ${NbNodes=2..5 step 1}
+**.numHosts = ${NbNodes=2..4 step 1}
 sim.node[*].app.flood = true
 sim.node[0].stats.vector-recording = true
 #sim.node[0].stats.**.with-akaroa = true
+sim.node[0].nic.mac.packetsBER.vector-recording = yes
+sim.node[0].nic.mac.successNoRS.vector-recording = yes
+sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.vector-recording = false
-#sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
-#sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
-#sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
-#sim.node[0].nic.mac.ber.with-akaroa = true
 
 [Config MAICircleNPoisson]
 description = "Evaluates the BER as a function of the number of concurrent transmissions N at equal distance of the receiver"
@@ -271,12 +261,10 @@ sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassem
 sim.node[*].app.flood = false
 sim.node[*].app.trafficParam = ${Lambda=0.1,0.005}
 sim.node[0].stats.vector-recording = true
-#sim.node[0].stats.**.with-akaroa = true
+sim.node[0].nic.mac.packetsBER.vector-recording = yes
+sim.node[0].nic.mac.successNoRS.vector-recording = yes
+sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.vector-recording = false
-#sim.node[0].nic.mac.meanPacketBER.with-akaroa = false # deactivated because does not stabilize / converge fast enough
-#sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
-#sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = false # converges much slower 
-#sim.node[0].nic.mac.ber.with-akaroa = true
 
 [Config flury07]
 description="Reproduction of MAI scenario A from Flury et al., ICUWB07"
