Activated vector output for BERDistance config.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -152,6 +152,9 @@ sim.node[0].stats.vector-recording = false
 #sim.node[0].stats.**.with-akaroa = false
 sim.node[0].nic.mac.vector-recording = true
 sim.node[0].nic.phy.vector-recording = true
+sim.node[0].nic.mac.packetsBER.vector-recording = yes
+sim.node[0].nic.mac.successNoRS.vector-recording = yes
+sim.node[0].nic.mac.success.vector-recording = yes
 
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
