Updated MAI circle poisson configuration.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -235,7 +235,7 @@ repeat = 10
 [Config MAICircle]
 description = "Evaluates the impact of multiple access interference on bit error rate with homogeneous interferers"
 sim.node[0].app.nbPackets = 0
-sim.node[*].app.nbPackets = 100
+sim.node[*].app.nbPackets = 1000
 sim.node[*].app.dstAddr = 0
 include topo.ini
 
@@ -268,6 +268,8 @@ sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.vector-recording = false
+sim.node[0].nic.mac.packetSuccessRate.vector-recording = yes
+sim.node[0].nic.mac.packetSuccessRateNoRS.vector-recording = yes
 
 [Config flury07]
 description="Reproduction of MAI scenario A from Flury et al., ICUWB07"
