Added a repetition statement for circle MAI flooding to investigate surprising differences in MAI for CM1 between packet sizes of 7 and 31 bytes.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -253,6 +253,8 @@ sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.vector-recording = false
+sim.node[*].app.nbPackets = 200
+repeat=5
 
 [Config MAICircleNPoisson]
 description = "Evaluates the BER as a function of the number of concurrent transmissions N at equal distance of the receiver"
