Updated again config for maicircle flood.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -245,15 +245,16 @@ extends = MAICircle
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 sim.node[*].app.payloadSize = ${PacketSize=7,31} byte
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm5}.xml")
-**.numHosts = ${NbNodes=2..4 step 1}
+**.numHosts = ${NbNodes=2..5 step 1}
 sim.node[*].app.flood = true
 sim.node[0].stats.vector-recording = true
-#sim.node[0].stats.**.with-akaroa = true
 sim.node[0].nic.mac.packetsBER.vector-recording = yes
 sim.node[0].nic.mac.successNoRS.vector-recording = yes
 sim.node[0].nic.mac.success.vector-recording = yes
 sim.node[0].nic.mac.vector-recording = false
-sim.node[*].app.nbPackets = 200
+sim.node[0].stats.maiPER.vector-recording = true
+sim.node[0].stats.maiPERnoRS.vector-recording = true
+sim.node[*].app.nbPackets = 500
 repeat=5
 
 [Config MAICircleNPoisson]
