- extracted 802.15.4 specific code from csma module to own CSMA802154 module - made csma module a generic csma protocoll implementation, should replace CSMAMacLayer module in the future - added constant and linear backoff methods to csma module - added "getPhyHeaderLength" method to MacToPhyInterface since mac needs it to calculate signal duration - replaced PHY_HEADER_LENGTH constant in Mac80211 with the call to method "getPhyHeaderLength" - set headerLength parameter of phy module in Nic80211 to "192bit" - reverted/fixed CSMAMacLayer example to original state - fixed wrong calculated rssi value on instantaneous channel sense in Decider80211

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -26,11 +26,10 @@ phySim.world.use2D = false
 ##########################################################
 phySim.connectionManager.debug = false
 phySim.connectionManager.sendDirect = false
-phySim.connectionManager.radioRange = 92
-phySim.connectionManager.pMax = 2
-phySim.connectionManager.sat = -110
-phySim.connectionManager.alpha = 2.5
-phySim.connectionManager.carrierFrequency = 2.412e+9
+phySim.connectionManager.pMax = 100mW
+phySim.connectionManager.sat = -90dBm
+phySim.connectionManager.alpha = 3
+phySim.connectionManager.carrierFrequency = 2.412e+9Hz
 
 ##########################################################
 #             Host specific parameters                   #
