--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -46,7 +46,7 @@ csmaTestSim.node[*].nic.phy.usePropagationDelay = false
 csmaTestSim.node[*].nic.phy.thermalNoise = -110dBm
  
 csmaTestSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-csmaTestSim.node[*].nic.phy.decider = xmldoc("config.xml")
+#csmaTestSim.node[*].nic.phy.decider = xmldoc("config.xml")
 
 csmaTestSim.node[*].nic.phy.timeRXToTX = 0.000192s
 csmaTestSim.node[*].nic.phy.timeRXToSleep = 0s
