--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -55,7 +55,7 @@ phySim.*Node*.net.stats = false
 
 ################ MAC layer parameters ####################
 phySim.*Node[*].nic.mac.queueLength = 5
-phySim.*Node[*].nic.mac.headerLength = 24
+phySim.*Node[*].nic.mac.headerLength = 24bit
 phySim.*Node[*].nic.mac.slotDuration = 0.08s
 phySim.*Node[*].nic.mac.difs = 0.0005s
 phySim.*Node[*].nic.mac.maxTxAttempts = 14
