- added flag to csma module to enable/disable use of MAC acks - removed vci files of Nic80211Power test from repository

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -196,8 +196,9 @@ csmaTestSim.world.bcTraffic = false
 [Config Test2-B]
 extends = Test2-A
 description = "one sending host moving towards sink, without mac-acks"
-csmaTestSim.node[1].appl.destination = -1
-csmaTestSim.world.bcTraffic = true
+csmaTestSim.node[1].appl.destination = 10
+csmaTestSim.node*.nic.mac.useMACAcks = false
+csmaTestSim.world.bcTraffic = false
 
 [Config Test2-C]
 extends = Test2-A
