Updated parameters to use units for playground size.

--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -16,9 +16,9 @@ ned-path = ../../base;../../modules;../../examples;
 cmdenv-express-mode = true
 
 sim.**.coreDebug = false
-sim.playgroundSizeX = 500
-sim.playgroundSizeY = 500
-sim.playgroundSizeZ = 500
+sim.playgroundSizeX = 500 m
+sim.playgroundSizeY = 500 m
+sim.playgroundSizeZ = 500 m
 
 sim.world.useTorus = false
 sim.world.use2D = false
