- changed PhyLayerBattery to calculate base power consumption depending on current radio state - Decider now defines a power delta which is added to phy layers power consumption during radio state RX - added units and comments to SimpleBattery.ned parameters - updated ieee802154narrow example to use power consumption - updated expected output for Nic80211 power test - removed unnecessary clear calls from Blackboards initialisation
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@577 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -35,46 +35,18 @@ csmaTestSim.connectionManager.sat = -100dBm
 csmaTestSim.connectionManager.alpha = 2.5
 csmaTestSim.connectionManager.carrierFrequency = 2.4E+9Hz
 
-##########################################################
-#             Host specific parameters                   #
-##########################################################
-csmaTestSim.node[*].nic.connectionManagerName = "connectionManager"
-
-
 ################ PhyLayer parameters #####################
 csmaTestSim.node[*].nic.phy.usePropagationDelay = false
-csmaTestSim.node[*].nic.phy.thermalNoise = -110dBm
  
 csmaTestSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
 #csmaTestSim.node[*].nic.phy.decider = xmldoc("config.xml")
-
-csmaTestSim.node[*].nic.phy.timeRXToTX = 0.000192s
-csmaTestSim.node[*].nic.phy.timeRXToSleep = 0s
-
-csmaTestSim.node[*].nic.phy.timeTXToRX = 0.000192s
-csmaTestSim.node[*].nic.phy.timeTXToSleep = 0s
-
-csmaTestSim.node[*].nic.phy.timeSleepToRX = 0.001792s
-csmaTestSim.node[*].nic.phy.timeSleepToTX = 0.001792s
-
 csmaTestSim.node[*].nic.phy.sensitivity = -100dBm
 csmaTestSim.node[*].nic.phy.maxTXPower = 1.1mW
-
 csmaTestSim.node[*].nic.phy.initialRadioState = 0
-
 csmaTestSim.node[*].nic.phy.useThermalNoise = true
-csmaTestSim.node[*].nic.phy.headerLength = 48bit
 
 
 ################ MAC layer parameters ####################
-#phySim.node[*].nic.mac.queueLength = 100
-#phySim.node[*].nic.mac.headerLength = 72
-#phySim.node[*].nic.mac.slotDuration = 0.002s
-#phySim.node[*].nic.mac.difs = 0.0005s
-#phySim.node[*].nic.mac.maxTxAttempts = 3
-#phySim.node[*].nic.mac.defaultChannel = 0
-csmaTestSim.node[*].nic.mac.bitrate = 250000bps
-#phySim.node[*].nic.mac.contentionWindow = 20
 csmaTestSim.node[*].nic.mac.txPower = 1mW  # [mW]
 csmaTestSim.node[*].nic.mac.notAffectedByHostState = true
 csmaTestSim.node[*].nic.mac.macMinBE = 1
@@ -112,6 +84,19 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 **.appl.packetsPerPacketTime = 0.15
 
 csmaTestSim.world.bitrate = 250000
+
+**.battery.debug = false
+**.battery.nominal = 99999mAH
+**.battery.capacity = 99999mAH
+**.battery.voltage = 3.3V
+**.battery.resolution = 0.1s
+**.battery.publishDelta = 1
+**.battery.publishTime = 0
+**.battery.numDevices = 1
+
+**.batteryStats.debug = false
+**.batteryStats.detail = false
+**.batteryStats.timeSeries = false
 
 
 #################################################
