--- a/tests/power/Nic80211Test/omnetpp.ini
+++ b/tests/power/Nic80211Test/omnetpp.ini
@@ -107,7 +107,7 @@ sim.host[*].arp.debug = 0
 # debug switch
 
 sim.host[*].nic.mac.debug = true
-sim.host[*].nic.mac.headerLength = 272
+sim.host[*].nic.mac.headerLength = 272bit
 sim.host[*].nic.mac.queueLength = 14
 sim.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
 sim.host[*].nic.mac.defaultChannel = 0
@@ -152,16 +152,20 @@ sim.host[*].battery.publishTime = 0     # no timeout
 
 sim.host[*].battery.debug = true           
 sim.host[*].battery.resolution = 1.0s   # lifetime precision
-sim.host[*].battery.voltage = 1         # BatteryModule2.0 has no voltage
-sim.host[*].battery.capacity = 5.555555555555555 # equiv to 20/30K in AFOrig
-sim.host[*].battery.nominal = 8.333333333333334 # 
+sim.host[*].battery.voltage = 1V        # BatteryModule2.0 has no voltage
+sim.host[*].battery.capacity = 5.555555555555555 mAh # equiv to 20/30K in AFOrig
+sim.host[*].battery.nominal = 8.333333333333334 mAh# 
 
 
 # NIC parameters relatively prime for test case...
-sim.host[*].nic.sleepCurrent = 3
-sim.host[*].nic.idleCurrent = 5
-sim.host[*].nic.rxCurrent = 7
-sim.host[*].nic.txCurrent = 11
+sim.host[*].nic.sleepCurrent = 3mA
+sim.host[*].nic.rxCurrent = 5mA
+sim.host[*].nic.decodingCurrentDelta = 2mA
+sim.host[*].nic.txCurrent = 11mA
+sim.host[*].nic.rxTxCurrent = 0mA # no radio switching times
+sim.host[*].nic.txRxCurrent = 0mA # no radio switching times
+sim.host[*].nic.setupRxCurrent = 0mA # no radio switching times
+sim.host[*].nic.setupTxCurrent = 0mA # no radio switching times
 
 sim.world.playgroundSizeZ = 0m
 sim.host[*].mobility.z = 0
@@ -234,11 +238,11 @@ sim.host[2].mobility.x = 150
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
-sim.host[*].battery.nominal = 1.0 # 
-sim.host[2].battery.capacity = 1.0 #  battery will be not depleted
-sim.host[*].battery.capacity = 1.0 # 
-sim.host[*].nic.rxCurrent = 1700         
-sim.host[*].nic.txCurrent = 2100        
+sim.host[*].battery.nominal = 1.0 mAh # 
+sim.host[2].battery.capacity = 1.0 mAh #  battery will be not depleted
+sim.host[*].battery.capacity = 1.0 mAh # 
+sim.host[*].nic.decodingCurrentDelta = 1695mA # 1700-5  
+sim.host[*].nic.txCurrent = 2100mA      
 
 sim.host[*].batteryStats.capacity(relative).vector-recording = true
 sim.host[*].battery.publishDelta = 1            # no
@@ -258,11 +262,11 @@ sim.host[2].mobility.x = 150
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
-sim.host[*].battery.nominal = 1.0 # 
-sim.host[2].battery.capacity = 0.1 #  battery depleted before its burst
-sim.host[*].battery.capacity = 1.0 # 
-sim.host[*].nic.rxCurrent = 1700        
-sim.host[*].nic.txCurrent = 2100        
+sim.host[*].battery.nominal = 1.0mAh # 
+sim.host[2].battery.capacity = 0.1mAh #  battery depleted before its burst
+sim.host[*].battery.capacity = 1.0mAh # 
+sim.host[*].nic.decodingCurrentDelta = 1695mA # 1700-5        
+sim.host[*].nic.txCurrent = 2100mA      
 sim-time-limit = 10s
 
 
@@ -279,11 +283,11 @@ sim.host[2].mobility.x = 150
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
-sim.host[*].battery.nominal = 1.0 # 
-sim.host[2].battery.capacity = 0.3 #  battery depleted after its burst
-sim.host[*].battery.capacity = 1.0 # 
-sim.host[*].nic.rxCurrent = 1700        
-sim.host[*].nic.txCurrent = 2100        
+sim.host[*].battery.nominal = 1.0mAh # 
+sim.host[2].battery.capacity = 0.3mAh #  battery depleted after its burst
+sim.host[*].battery.capacity = 1.0mAh # 
+sim.host[*].nic.decodingCurrentDelta = 1695mA # 1700-5              
+sim.host[*].nic.txCurrent = 2100mA        
 sim-time-limit = 10s
 
 # check battery depletion and host failure notification (during idle)
@@ -301,20 +305,20 @@ sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 1
 sim.host[*].nic.mac.queueLength = 301
 sim.host[*].battery.resolution = 0.1s   # precision of host lifetime
-sim.host[*].battery.nominal = 1.0 # 
-sim.host[2].battery.capacity = 0.5 #  
-sim.host[*].battery.capacity = 1.0 # 
-sim.host[*].nic.idleCurrent = 500 #  
-sim.host[*].nic.rxCurrent = 1
-sim.host[*].nic.txCurrent = 2
+sim.host[*].battery.nominal = 1.0mAh # 
+sim.host[2].battery.capacity = 0.5mAh #  
+sim.host[*].battery.capacity = 1.0mAh # 
+sim.host[*].nic.rxCurrent = 500mA #  
+sim.host[*].nic.decodingCurrentDelta = -499mA # 1-500
+sim.host[*].nic.txCurrent = 2mA
 sim-time-limit = 10s
 
 
 # compare with AFTest (when idle and rxCurrent are equal, should be equivalent)
 [Config Eight]
-sim.host[*].nic.idleCurrent = 8
-sim.host[*].nic.rxCurrent = 8
-sim.host[*].nic.txCurrent = 8
+sim.host[*].nic.rxCurrent = 8mA
+sim.host[*].nic.decodingCurrentDelta = 0mA
+sim.host[*].nic.txCurrent = 8mA
 sim.host[*].battery.publishDelta = 1            # none
 sim.host[*].battery.publishTime = 0.250s         # 20 hosts * 4 data/sec * 500 sec
 sim.host[*].batteryStats.capacity(relative).vector-recording = true
@@ -334,10 +338,10 @@ sim.host[*].nic.mac.queueLength = 50
 # see e.g. http://imote2-linux.wiki.sourceforge.net/UCAM-WSB100
 # here we treat all components as 3V
 
-sim.host[*].nic.sleepCurrent =  .85     #; mA
-sim.host[*].nic.idleCurrent =   172     #; mA
-sim.host[*].nic.rxCurrent =     200     #; mA
-sim.host[*].nic.txCurrent =     153     #; mA
+sim.host[*].nic.sleepCurrent =  .85 mA
+sim.host[*].nic.rxCurrent =   172 mA
+sim.host[*].nic.decodingCurrentDelta = 28 mA   # 200-172
+sim.host[*].nic.txCurrent =     153 mA
 
 # Marvell 88W8686 spec  gives 14dBm max for CCK  
 # leave at 20dBm from original omnetpp.ini; unclear how to translate
@@ -348,9 +352,9 @@ sim.host[*].nic.txCurrent =     153     #; mA
 # note that the G1 actually uses a qualcomm chip, but smartphone is a
 # plausible low power wi-fi scenario
 
-sim.host[*].battery.voltage =   3       #; V
-sim.host[*].battery.capacity =  1150    #; mAhr
-sim.host[*].battery.nominal =   1150    #; mAhr
+sim.host[*].battery.voltage =   3 V
+sim.host[*].battery.capacity =  1150 mAh
+sim.host[*].battery.nominal =   1150 mAh
 
 # output parameters
 output-vector-file = omnetpp.10.vec
@@ -376,10 +380,10 @@ sim.host[*].nic.mac.queueLength = 250
 # see e.g. http://imote2-linux.wiki.sourceforge.net/UCAM-WSB100
 # here we treat all components as 3V
 
-sim.host[*].nic.sleepCurrent =  .85     #; mA
-sim.host[*].nic.idleCurrent =   172     #; mA
-sim.host[*].nic.rxCurrent =     200     #; mA
-sim.host[*].nic.txCurrent =     153     #; mA
+sim.host[*].nic.sleepCurrent =  .85 mA
+sim.host[*].nic.rxCurrent =   172 mA
+sim.host[*].nic.decodingCurrentDelta = 28 mA  # 200-172
+sim.host[*].nic.txCurrent =     153 mA
 
 # Marvell 88W8686 spec  gives 14dBm max for CCK  
 # leave at 20dBm from original omnetpp.ini; unclear how to translate
@@ -390,9 +394,9 @@ sim.host[*].nic.txCurrent =     153     #; mA
 # note that the G1 actually uses a qualcomm chip, but smartphone is a
 # plausible low power wi-fi scenario
 
-sim.host[*].battery.voltage =   3       #; V
-sim.host[*].battery.capacity =  1150    #; mAhr
-sim.host[*].battery.nominal =   1150    #; mAhr
+sim.host[*].battery.voltage =   3 V
+sim.host[*].battery.capacity =  1150 mAh
+sim.host[*].battery.nominal =   1150 mAh
 
 
 # output parameters
