--- a/tests/power/deviceTestMulti/omnetpp.ini
+++ b/tests/power/deviceTestMulti/omnetpp.ini
@@ -37,9 +37,9 @@ sim.host[*].blackboard.debug = 0
 # 
 sim.host[*].battery.debug = 0 
 sim.host[*].battery.resolution = 0.1s
-sim.host[*].battery.voltage = 3.0
-sim.host[*].battery.nominal = 1.0
-sim.host[*].battery.capacity = 1.0
+sim.host[*].battery.voltage = 3.0V
+sim.host[*].battery.nominal = 1.0mAh
+sim.host[*].battery.capacity = 1.0mAh
 
 # publish to Stats every 5% change and every 1s (subject to resolution)
 sim.host[*].battery.publishDelta = 0.05
