--- a/tests/power/deviceTest/omnetpp.ini
+++ b/tests/power/deviceTest/omnetpp.ini
@@ -40,8 +40,8 @@ sim.host[*].blackboard.debug = 0
 # 
 # 1 mA-hr at 3V, update internal status every 0.1s
 sim.host[*].battery.debug = 0 
-sim.host[*].battery.voltage = 3.0
-sim.host[*].battery.nominal = 1.0
+sim.host[*].battery.voltage = 3.0V
+sim.host[*].battery.nominal = 1.0mAh
 
 # publish to Stats every 5% change and every 1s (subject to resolution)
 sim.host[*].battery.publishDelta = 0.05
@@ -65,7 +65,7 @@ sim.host[*].batteryStats.debug = 0
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 output-vector-file = omnetpp_1.vec
 
@@ -76,7 +76,7 @@ output-vector-file = omnetpp_1.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true
-sim.host[*].battery.capacity = 1.0       	
+sim.host[*].battery.capacity = 1.0 mAh
 sim.host[*].battery.resolution = 0.1234s
 output-vector-file = omnetpp_2.vec
 
@@ -87,7 +87,7 @@ output-vector-file = omnetpp_2.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0       	
+sim.host[*].battery.capacity = 1.0 mAh
 sim.host[*].battery.resolution = 0.500s
 output-vector-file = omnetpp_3.vec
 
@@ -97,7 +97,7 @@ output-vector-file = omnetpp_3.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 0.75
+sim.host[*].battery.capacity = 0.75mAh
 sim.host[*].battery.resolution = 0.100s
 output-vector-file = omnetpp_4.vec
 
@@ -107,7 +107,7 @@ output-vector-file = omnetpp_4.vec
 sim-time-limit = 4.65s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 output-vector-file = omnetpp_5.vec
 
@@ -117,7 +117,7 @@ output-vector-file = omnetpp_5.vec
 sim-time-limit = 4.65s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.05s
 output-vector-file = omnetpp_6.vec
 
@@ -127,7 +127,7 @@ output-vector-file = omnetpp_6.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0 mAh
 sim.host[*].battery.resolution = 0.100s
 sim.host[*].battery.publishDelta = 1.0
 sim.host[*].battery.publishTime = 0.5s
@@ -139,7 +139,7 @@ output-vector-file = omnetpp_7.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 sim.host[*].battery.publishDelta = 1.0
 sim.host[*].battery.publishTime = 0.05s
@@ -151,7 +151,7 @@ output-vector-file = omnetpp_8.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 sim.host[*].battery.publishDelta = 0.05
 sim.host[*].battery.publishTime = 0
@@ -163,7 +163,7 @@ output-vector-file = omnetpp_9.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.025s
 sim.host[*].battery.publishDelta = 0.05
 sim.host[*].battery.publishTime = 0
@@ -175,7 +175,7 @@ output-vector-file = omnetpp_10.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 1.0
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 sim.host[*].batteryStats.*.vector-recording = true
 output-vector-file = omnetpp_11.vec
@@ -186,7 +186,7 @@ output-vector-file = omnetpp_11.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = true# 	
-sim.host[*].battery.capacity = 0.5
+sim.host[*].battery.capacity = 0.5mAh
 sim.host[*].battery.resolution = 0.100s
 sim.host[*].batteryStats.*.vector-recording = true
 output-vector-file = omnetpp_12.vec
@@ -196,12 +196,12 @@ output-vector-file = omnetpp_12.vec
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = false# 	
 sim.host[*].batteryStats.timeSeries = false# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
 
 [Config Fourteen]
 sim-time-limit = 15s
 sim.host[*].batteryStats.detail = true# 	
 sim.host[*].batteryStats.timeSeries = false# 	
-sim.host[*].battery.capacity = 1.0      
+sim.host[*].battery.capacity = 1.0mAh
 sim.host[*].battery.resolution = 0.100s
