- updated unit of battery capacity in ieee802154Narrow examples omnetpp.ini - added run script for Nic80211 power test

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -86,8 +86,8 @@ csmaTestSim.node[*].appl.packetLength = 24880bit
 csmaTestSim.world.bitrate = 250000
 
 **.battery.debug = false
-**.battery.nominal = 99999mAH
-**.battery.capacity = 99999mAH
+**.battery.nominal = 99999mAh
+**.battery.capacity = 99999mAh
 **.battery.voltage = 3.3V
 **.battery.resolution = 0.1s
 **.battery.publishDelta = 1
