--- a/examples/ieee802154a/noakaroa.ini
+++ b/examples/ieee802154a/noakaroa.ini
@@ -12,6 +12,10 @@ ned-path = ../../base;../../modules;../../examples;
 #**.with-akaroa = false
 **.vector-recording = false
 
+# Because of battery module, there are always scheduled events
+# thus we need a fallback sim-time-limit.
+# Otherwise the battery module will eventually lead to a simtime_t overflow
+sim-time-limit=1 d # 30s for 10000 packets
 
 cmdenv-express-mode = true
 
@@ -30,26 +34,27 @@ sim.channelControl.alpha = 2.0
 sim.channelControl.carrierFrequency = 4500e+6 Hz
 
 sim.node[*].nic.phy.usePropagationDelay = false
-sim.node[*].nic.phy.thermalNoise = 1.0
-sim.node[*].nic.phy.timeRXToTX = 0.00021
-sim.node[*].nic.phy.timeRXToSleep = 0.000031
-sim.node[*].nic.phy.timeTXToRX = 0.00012
-sim.node[*].nic.phy.timeTXToSleep = 0.000032
-sim.node[*].nic.phy.timeSleepToRX = 0.000100
-sim.node[*].nic.phy.timeSleepToTX = 0.000100
+sim.node[*].nic.phy.thermalNoise = 0 dBm
+sim.node[*].nic.phy.useThermalNoise = false # we use our own thermal noise model
+sim.node[*].nic.phy.timeRXToTX = 0.00021 s
+sim.node[*].nic.phy.timeRXToSleep = 0.000031 s
+sim.node[*].nic.phy.timeTXToRX = 0.00012 s
+sim.node[*].nic.phy.timeTXToSleep = 0.000032 s
+sim.node[*].nic.phy.timeSleepToRX = 0.000100 s
+sim.node[*].nic.phy.timeSleepToTX = 0.000100 s
 sim.node[*].nic.phy.PSleep = 0.01
 sim.node[*].nic.phy.PTx = 1
 sim.node[*].nic.phy.PSync = 100
 sim.node[*].nic.phy.PRx = 30
 sim.node[*].nic.phy.PSwitch = 10
-sim.node[*].nic.phy.maxTXPower = 1 # useless but required by BasePhyLayer
+sim.node[*].nic.phy.maxTXPower = 1 mW # useless but required by BasePhyLayer
+sim.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
+sim.node[*].nic.phy.initialRadioState = 0 # ??
 sim.node[0].nic.phy.debug = true
 ***.debug = false
 
 sim.node[*].nic.connectionManagerName = "channelControl"
 
-sim.node[*].nic.phy.sensitivity = 0.1
-sim.node[*].nic.phy.maxTXPower = 100.0
 
 sim.node[*].nic.mac.headerLength = 0 byte
 sim.node[*].nic.mac.maxRetries = 1
@@ -70,6 +75,20 @@ sim.node[8].nic.mac.netaddress = 8
 sim.node[9].nic.mac.netaddress = 9
 sim.node[10].nic.mac.netaddress = 10
 sim.node[*].nic.mac.debug = false
+
+**.battery.debug = false
+**.battery.nominal = 99999mAh
+**.battery.capacity = 99999mAh
+**.battery.voltage = 3.3V
+**.battery.resolution = 10s
+**.battery.publishDelta = 0.1
+**.battery.publishTime = 0
+**.battery.numDevices = 1
+
+**.batteryStats.debug = false
+**.batteryStats.detail = false
+**.batteryStats.timeSeries = false
+
 
 sim.node[*].app.trafficParam = 1
 sim.node[0].app.nodeAddr = 0
