Added units and Battery configuration.

--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -13,10 +13,15 @@ ned-path = ../../base;../../modules;../../examples;
 # cmdenv-runs-to-execute=1
 cmdenv-express-mode = true
 
+# Because of the battery module, there are always scheduled events
+# thus we need a fallback sim-time-limit.
+# Otherwise the battery module will eventually lead to a simtime_t overflow
+sim-time-limit=1 d # 30s for 10000 packets
+
 sim.**.coreDebug = false
-sim.playgroundSizeX = 500
-sim.playgroundSizeY = 500
-sim.playgroundSizeZ = 500
+sim.playgroundSizeX = 500 m
+sim.playgroundSizeY = 500 m 
+sim.playgroundSizeZ = 500 m
 
 sim.world.useTorus = false
 sim.world.use2D = false
@@ -27,22 +32,38 @@ sim.channelControl.sat = -100 dBm
 sim.channelControl.alpha = 2.0
 sim.channelControl.carrierFrequency = 4500e+6 Hz
 
+
 sim.node[*].nic.phy.usePropagationDelay = false
-sim.node[*].nic.phy.thermalNoise = 1.0
-sim.node[*].nic.phy.timeRXToTX = 0.00021
-sim.node[*].nic.phy.timeRXToSleep = 0.000031
-sim.node[*].nic.phy.timeTXToRX = 0.00012
-sim.node[*].nic.phy.timeTXToSleep = 0.000032
-sim.node[*].nic.phy.timeSleepToRX = 0.000103
-sim.node[*].nic.phy.timeSleepToTX = 0.000203
+sim.node[*].nic.phy.thermalNoise = 0 dBm
+sim.node[*].nic.phy.useThermalNoise = false # we use our own thermal noise model
+sim.node[*].nic.phy.timeRXToTX = 0.00021 s
+sim.node[*].nic.phy.timeRXToSleep = 0.000031 s
+sim.node[*].nic.phy.timeTXToRX = 0.00012 s
+sim.node[*].nic.phy.timeTXToSleep = 0.000032 s
+sim.node[*].nic.phy.timeSleepToRX = 0.000103 s
+sim.node[*].nic.phy.timeSleepToTX = 0.000203 s
 sim.node[*].nic.phy.PSleep = 0.01
 sim.node[*].nic.phy.PTx = 1
 sim.node[*].nic.phy.PSync = 100
 sim.node[*].nic.phy.PRx = 30
 sim.node[*].nic.phy.PSwitch = 10
-sim.node[*].nic.phy.maxTXPower = 1 # useless but required by BasePhyLayer
+sim.node[*].nic.phy.maxTXPower = 1 mW # useless but required by BasePhyLayer
+sim.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
+sim.node[*].nic.phy.initialRadioState = 0
 sim.node[0].nic.phy.debug = true
 ***.debug = false
+
+**.battery.debug = false
+**.battery.nominal = 99999mAh
+**.battery.capacity = 99999mAh
+**.battery.voltage = 3.3V
+**.battery.resolution = 10s
+**.battery.publishDelta = 0.1
+**.battery.publishTime = 0
+**.battery.numDevices = 1  # only the PHY module uses energy from the battery
+**.batteryStats.debug = false
+**.batteryStats.detail = false
+**.batteryStats.timeSeries = false
 
 sim.node[*].nic.connectionManagerName = "channelControl"
 
@@ -76,13 +97,13 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERDistance]
-description = "Evaluates the bit error rate as a function of distance"
+description = "Evaluates the bit error rate as a function of distance with various channel models."
 sim.node[1].app.payloadSize = 8 byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 sim.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
-sim.node[1].app.nbPackets = ${nbPackets=1000}
+sim.node[1].app.nbPackets = ${nbPackets=100}
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 
