Added network size values to ini files (b/c of omnet++4.1b1 ned syntax bug).

--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -22,6 +22,9 @@ sim.**.coreDebug = false
 sim.playgroundSizeX = 500 m
 sim.playgroundSizeY = 500 m 
 sim.playgroundSizeZ = 500 m
+sim.world.playgroundSizeX = 500 m
+sim.world.playgroundSizeY = 500 m
+sim.world.playgroundSizeZ = 500 m
 
 sim.world.useTorus = false
 sim.world.use2D = false
