Improved documentation for beginners.

--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -53,10 +53,8 @@ sim.node[*].nic.phy.PSwitch = 10
 sim.node[*].nic.phy.maxTXPower = 1 mW # useless but required by BasePhyLayer
 sim.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
 sim.node[*].nic.phy.initialRadioState = 0
-sim.node[0].nic.phy.debug = true
 ***.debug = false
 
-**.battery.debug = false
 **.battery.nominal = 99999mAh
 **.battery.capacity = 99999mAh
 **.battery.voltage = 3.3V
@@ -70,8 +68,6 @@ sim.node[0].nic.phy.debug = true
 
 sim.node[*].nic.connectionManagerName = "channelControl"
 
-sim.node[*].nic.phy.sensitivity = 0.1
-sim.node[*].nic.phy.maxTXPower = 100.0
 sim.node[*].nic.mac.headerLength = 2 byte
 sim.node[*].nic.mac.maxRetries = 1
 sim.node[0].nic.mac.stats = true
@@ -104,9 +100,21 @@ description = "Evaluates the bit error rate as a function of distance with vario
 sim.node[1].app.payloadSize = 8 byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
-sim.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25} 
 sim.node[0].app.nbPackets = 0
-sim.node[1].app.nbPackets = ${nbPackets=100}
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2}.xml")
+sim.node[1].app.nbPackets = ${nbPackets=250}
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 
+[Config channelPlots]
+description = "Sends one packet per channel and traces all points at reception."
+sim.node[*].app.dstAddr = 0
+**.numHosts = 2
+sim.node[1].app.payloadSize = ${packetSize=120} byte
+sim.node[1].mobility.x = ${distance=10}
+sim.node[1].app.nbPackets = ${nbPackets=1}
+sim.node[0].app.nbPackets = 0
+sim-time-limit=10 s
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}-trace.xml") # sync always succeeds
+sim.node[1].nic.phy.vector-recording = true
