- changed to BaseConnectionManager to divide playground into equal sized cells which cover the exact playground. This fixes a connection bug with torus playgrounds which aren't dividable by the max interference distance - added test for valid playground size in BaseWorldUtility - decreased EPSILON constant in FWMath.h - fixed wrong use2D parameter in Mac80211 example

--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -35,7 +35,7 @@ sim.numHosts = 10
 #			WorldUtility parameters                      #
 ##########################################################
 sim.world.useTorus = false
-sim.world.use2D = false
+sim.world.use2D = true
 
 ##############################################################################
 #       Parameters for the ConnectionManager                                 #
