- extendes connectionManager test to check every connection to every host on every change

--- a/tests/connectionManager/omnetpp.ini
+++ b/tests/connectionManager/omnetpp.ini
@@ -24,6 +24,7 @@ ccSim.playgroundSizeY = 500m
 ##############################################################################
 #       Parameters for the ChannelControl                                    #
 ##############################################################################
+ccSim.channelcontrol.maxInterferenceDistance = 91m
 ccSim.channelcontrol.carrierFrequency = 868e+6Hz
 
 
