Fixed small bugs in ieee802154a example.

--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -68,7 +68,7 @@ sim.node[*].nic.phy.initialRadioState = 0
 
 sim.node[*].nic.connectionManagerName = "channelControl"
 
-sim.node[*].nic.mac.headerLength = 2 byte
+sim.node[*].nic.mac.headerLength = 16 bit
 sim.node[*].nic.mac.maxRetries = 1
 sim.node[0].nic.mac.stats = true
 sim.node[*].nic.mac.stats = false
